--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="refresh" content="5; URL=https://diaz-camilo.github.io/Tasty-frontend/#/" />
+  <meta http-equiv="refresh" content="URL=https://diaz-camilo.github.io/profile/" />
   <title>Document</title>
 </head>
 <body>
-  <p>If you are not redirected in five seconds, <a href="https://diaz-camilo.github.io/Tasty-frontend/#/">click here</a>.</p>
+  <p>If you are not redirected  to https://diaz-camilo.github.io/profile/ in five seconds, <a href="https://diaz-camilo.github.io/profile/">click here</a>.</p>
 </body>
 </html>
 
